--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" rel="stylesheet" />
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="../src/assets/bootstrap/css/bootstrap.min.css"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"/>
+    <link rel="stylesheet" href="../src/assets/fonts/fontawesome-all.min.css"/>
+    <link rel="stylesheet" href="../src/assets/fonts/font-awesome.min.css"/>
+    <link rel="stylesheet" href="../src/assets/fonts/fontawesome5-overrides.min.css"/>
+    <link rel="stylesheet" href="../src/assets/css/styles.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css"/>
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
